[package]
name = "unwrap_or_log"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["logger", "error"]
description = "A simple crate adding two functions to all std::resut::Result to log errors using the log crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"

[dev-dependencies]
simple_logger = "4.3.3"
thiserror = "1.0.57"
