[package]
name = "unwrap_or_log"
version = "0.2.0"
authors = ["https://github.com/ninomerlino"]
edition = "2021"
license = "MIT"
keywords = ["logger", "error"]
description = "A simple crate adding two functions to all std::resut::Result to log errors using the log crate"
documentation = "https://docs.rs/unwrap_or_log"
readme = "README.md"
repository = "https://github.com/ninomerlino/unwrap_or_log"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"

[dev-dependencies]
simple_logger = "4.3.3"
thiserror = "1.0.57"
